add projects section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <!-- <p>Building a successful product is a challenge. I am highly energetic in user experience design, interfaces and web development.</p> -->
                         <p>Let's turn your ideas into reality. I am a seasoned software developer, working across website and mobile app development.</p>
                         <div class="custom-btn-group mt-4">
-                          <a href="#" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
+                          <a href="#resume" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Experience</a>
                           <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Get a free quote</a>
                         </div>
                     </div>
@@ -82,7 +82,7 @@
 
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="about-image svg">
-                        <img src="images/undraw/undraw_software_engineer_lvl5.svg" class="img-fluid" alt="svg image">
+                        <img src="images/vector/vector-homepage.png" class="img-fluid" alt="png image">
                     </div>
                 </div>
 
@@ -98,39 +98,38 @@
                   <div class="col-lg-11 text-center mx-auto col-12">
 
                       <div class="col-lg-8 mx-auto">
-                        <h2>Things I have designed for digital media agencies</h2>
+                        <h2>Some projects I worked on for consumers</h2>
                       </div>
 
-                      <div class="owl-carousel owl-theme">
-                        <div class="item">
-                          <div class="project-info">
-                            <img src="images/project/project-image01.png" class="img-fluid" alt="project image">
-                          </div>
-                        </div>
+                      <div class="owl-carousel owl-theme">  
 
                         <div class="item">
-                          <div class="project-info">
-                            <img src="images/project/project-image02.png" class="img-fluid" alt="project image">
+                          <div class="project-wrapper">
+                            <div class="project-info">
+                              <div class="project-thumbnail col-md-12">
+                                <img src="./images/project/project-1.png" class="img-fluid" /> 
+                              </div> 
+                            </div>
                           </div>
-                        </div>
-
+                        </div>  
                         <div class="item">
-                          <div class="project-info">
-                            <img src="images/project/project-image03.png" class="img-fluid" alt="project image">
+                          <div class="project-wrapper">
+                            <div class="project-info">
+                              <div class="project-thumbnail col-md-12">
+                                <img src="./images/project/project-2.png" class="img-fluid" /> 
+                              </div> 
+                            </div>
                           </div>
-                        </div>
-
+                        </div> 
                         <div class="item">
-                          <div class="project-info">
-                            <img src="images/project/project-image04.png" class="img-fluid" alt="project image">
+                          <div class="project-wrapper">
+                            <div class="project-info">
+                              <div class="project-thumbnail col-md-12">
+                                <img src="./images/project/project-3.png" class="img-fluid" /> 
+                              </div> 
+                            </div>
                           </div>
-                        </div>
-
-                        <div class="item">
-                          <div class="project-info">
-                            <img src="images/project/project-image05.png" class="img-fluid" alt="project image">
-                          </div>
-                        </div>
+                        </div>  
                       </div>
 
                   </div>
