fix image url link

--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
                     </li>
                     <li class="nav-item">
                         <a href="#project" class="nav-link"><span data-hover="Projects">Projects</span></a>
+                    </li> 
+                    <li class="nav-item">
+                        <a href="#experience" class="nav-link"><span data-hover="Experience">Experience</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#resume" class="nav-link"><span data-hover="Resume">Resume</span></a>
+                      <a href="#testimonials" class="nav-link"><span data-hover="Testimonials">Testimonials</span></a>
                     </li>
                     <li class="nav-item">
                         <a href="#contact" class="nav-link"><span data-hover="Contact">Contact</span></a>
@@ -69,9 +72,7 @@
                                     <span class="animated-item">Web Developer</span>
                                     <span class="animated-item">Mobile Developer</span>
                                 </div>
-                        </h1>
-
-                        <!-- <p>Building a successful product is a challenge. I am highly energetic in user experience design, interfaces and web development.</p> -->
+                        </h1> 
                         <p>Let's turn your ideas into reality. I am a seasoned software developer, working across website and mobile app development.</p>
                         <div class="custom-btn-group mt-4">
                           <a href="#resume" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Experience</a>
@@ -104,7 +105,7 @@
                   <div class="project-wrapper">
                     <div class="project-info">
                       <div class="project-thumbnail col-md-12">
-                        <img src="./images/project/project-1.png" class="img-fluid" /> 
+                        <img src="images/project/project-1.png" class="img-fluid" /> 
                       </div> 
                     </div>
                   </div>
@@ -113,7 +114,7 @@
                   <div class="project-wrapper">
                     <div class="project-info">
                       <div class="project-thumbnail col-md-12">
-                        <img src="./images/project/project-2.png" class="img-fluid" /> 
+                        <img src="images/project/project-2.png" class="img-fluid" /> 
                       </div> 
                     </div>
                   </div>
@@ -122,7 +123,7 @@
                   <div class="project-wrapper">
                     <div class="project-info">
                       <div class="project-thumbnail col-md-12">
-                        <img src="./images/project/project-3.png" class="img-fluid" /> 
+                        <img src="images/project/project-3.png" class="img-fluid" /> 
                       </div> 
                     </div>
                   </div>
@@ -160,7 +161,7 @@
                 <div class="row">
                   <div class="col-md-3">
                     <div class="tech-img-wrapper"> 
-                      <img src="../my-portfolio-2024/images/technologies/backend/nodejs.png" class="img-fluid"/>
+                      <img src="images/technologies/backend/nodejs.png" class="img-fluid"/>
                       <div class="overlay">
                         <div class="text">Node.js® is a free, open-source, cross-platform JavaScript runtime environment that lets developers create servers, web apps, command line tools and scripts.</div>
                       </div>
@@ -168,7 +169,7 @@
                   </div>
                   <div class="col-md-3">
                     <div class="tech-img-wrapper"> 
-                      <img src="../my-portfolio-2024/images/technologies/backend/php.png" class="img-fluid"/>
+                      <img src="images/technologies/backend/php.png" class="img-fluid"/>
                       <div class="overlay">
                         <div class="text">PHP is an open-source, server-side programming language that can be used to create websites, applications, customer relationship management systems and more. It is a widely-used general-purpose language that can be embedded into HTML.</div>
                       </div>
@@ -176,7 +177,7 @@
                   </div>  
                   <div class="col-md-3">
                     <div class="tech-img-wrapper"> 
-                      <img src="../my-portfolio-2024/images/technologies/backend/laravel.png" class="img-fluid"/>
+                      <img src="images/technologies/backend/laravel.png" class="img-fluid"/>
                       <div class="overlay">
                         <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
                       </div>
@@ -184,7 +185,7 @@
                   </div>  
                   <div class="col-md-3">
                     <div class="tech-img-wrapper"> 
-                      <img src="../my-portfolio-2024/images/technologies/backend/codeigniter.png" class="img-fluid"/>
+                      <img src="images/technologies/backend/codeigniter.png" class="img-fluid"/>
                       <div class="overlay">
                         <div class="text">CodeIgniter is an free and open-source software rapid development web framework, for use in building dynamic web sites with PHP. CodeIgniter.   </div>
                       </div>
@@ -192,7 +193,7 @@
                   </div>  
                   <div class="col-md-3">
                     <div class="tech-img-wrapper"> 
-                      <img src="../my-portfolio-2024/images/technologies/backend/python.png" class="img-fluid"/>
+                      <img src="images/technologies/backend/python.png" class="img-fluid"/>
                       <div class="overlay">
                         <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
                       </div>
@@ -200,7 +201,7 @@
                   </div>  
                   <div class="col-md-3">
                     <div class="tech-img-wrapper"> 
-                      <img src="../my-portfolio-2024/images/technologies/backend/java.png" class="img-fluid"/>
+                      <img src="images/technologies/backend/java.png" class="img-fluid"/>
                       <div class="overlay">
                         <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
                       </div>
@@ -213,7 +214,7 @@
                 <div class="row">
                   <div class="col-md-3">
                     <div class="tech-img-wrapper"> 
-                      <img src="../my-portfolio-2024/images/technologies/frontend/reactjs.png" class="img-fluid"/>
+                      <img src="images/technologies/frontend/reactjs.png" class="img-fluid"/>
                       <div class="overlay">
                         <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
                       </div>
@@ -221,7 +222,7 @@
                   </div> 
                   <div class="col-md-3">
                     <div class="tech-img-wrapper"> 
-                      <img src="../my-portfolio-2024/images/technologies/frontend/angular.png" class="img-fluid"/>
+                      <img src="images/technologies/frontend/angular.png" class="img-fluid"/>
                       <div class="overlay">
                         <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
                       </div>
@@ -229,7 +230,7 @@
                   </div>
                   <div class="col-md-3">
                     <div class="tech-img-wrapper"> 
-                      <img src="../my-portfolio-2024/images/technologies/frontend/javascript.png" class="img-fluid"/>
+                      <img src="images/technologies/frontend/javascript.png" class="img-fluid"/>
                       <div class="overlay">
                         <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
                       </div>
@@ -237,7 +238,7 @@
                   </div>
                   <div class="col-md-3">
                     <div class="tech-img-wrapper"> 
-                      <img src="../my-portfolio-2024/images/technologies/frontend/html.png" class="img-fluid"/>
+                      <img src="images/technologies/frontend/html.png" class="img-fluid"/>
                       <div class="overlay">
                         <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
                       </div>
@@ -245,7 +246,7 @@
                   </div>
                   <div class="col-md-3">
                     <div class="tech-img-wrapper"> 
-                      <img src="../my-portfolio-2024/images/technologies/frontend/css.png" class="img-fluid"/>
+                      <img src="images/technologies/frontend/css.png" class="img-fluid"/>
                       <div class="overlay">
                         <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
                       </div>
@@ -253,7 +254,7 @@
                   </div>
                   <div class="col-md-3">
                     <div class="tech-img-wrapper"> 
-                      <img src="../my-portfolio-2024/images/technologies/frontend/sass.png" class="img-fluid"/>
+                      <img src="images/technologies/frontend/sass.png" class="img-fluid"/>
                       <div class="overlay">
                         <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
                       </div>
@@ -261,7 +262,7 @@
                   </div>
                   <div class="col-md-3">
                     <div class="tech-img-wrapper"> 
-                      <img src="../my-portfolio-2024/images/technologies/frontend/ionic.png" class="img-fluid"/>
+                      <img src="images/technologies/frontend/ionic.png" class="img-fluid"/>
                       <div class="overlay">
                         <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
                       </div>
@@ -269,7 +270,7 @@
                   </div>
                   <div class="col-md-3">
                     <div class="tech-img-wrapper"> 
-                      <img src="../my-portfolio-2024/images/technologies/frontend/bootstrap.png" class="img-fluid"/>
+                      <img src="images/technologies/frontend/bootstrap.png" class="img-fluid"/>
                       <div class="overlay">
                         <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
                       </div>
@@ -281,7 +282,7 @@
                 <div class="row">
                   <div class="col-md-3">
                     <div class="tech-img-wrapper"> 
-                      <img src="../my-portfolio-2024/images/technologies/devops/git.png" class="img-fluid"/>
+                      <img src="images/technologies/devops/git.png" class="img-fluid"/>
                       <div class="overlay">
                         <div class="text">Hello World</div>
                       </div>
@@ -289,7 +290,7 @@
                   </div> 
                   <div class="col-md-3">
                     <div class="tech-img-wrapper"> 
-                      <img src="../my-portfolio-2024/images/technologies/devops/gitlab.png" class="img-fluid"/>
+                      <img src="images/technologies/devops/gitlab.png" class="img-fluid"/>
                       <div class="overlay">
                         <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
                       </div>
@@ -297,7 +298,7 @@
                   </div>
                   <div class="col-md-3">
                     <div class="tech-img-wrapper"> 
-                      <img src="../my-portfolio-2024/images/technologies/devops/docker.png" class="img-fluid"/>
+                      <img src="images/technologies/devops/docker.png" class="img-fluid"/>
                       <div class="overlay">
                         <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
                       </div>
@@ -305,7 +306,7 @@
                   </div>
                   <div class="col-md-3">
                     <div class="tech-img-wrapper"> 
-                      <img src="../my-portfolio-2024/images/technologies/devops/bitbucket.png" class="img-fluid"/>
+                      <img src="images/technologies/devops/bitbucket.png" class="img-fluid"/>
                       <div class="overlay">
                         <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
                       </div>
@@ -319,7 +320,7 @@
       </div>
     </section>
     <!-- FEATURES -->
-    <section class="resume py-5 d-lg-flex justify-content-center align-items-center" id="resume">
+    <section class="resume py-5 d-lg-flex justify-content-center align-items-center" id="experience">
         <div class="container">
             <div class="row">
 
