fix mobile responsiveness and dark mode

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="item">
                   <div class="project-wrapper">
                     <div class="project-info">
-                      <div class="project-thumbnail col-md-12">
+                      <div class="project-thumbnail">
                         <img src="images/project/project-1.png" class="img-fluid" /> 
                       </div> 
                     </div>
@@ -113,7 +113,7 @@
                 <div class="item">
                   <div class="project-wrapper">
                     <div class="project-info">
-                      <div class="project-thumbnail col-md-12">
+                      <div class="project-thumbnail">
                         <img src="images/project/project-2.png" class="img-fluid" /> 
                       </div> 
                     </div>
@@ -122,7 +122,7 @@
                 <div class="item">
                   <div class="project-wrapper">
                     <div class="project-info">
-                      <div class="project-thumbnail col-md-12">
+                      <div class="project-thumbnail">
                         <img src="images/project/project-3.png" class="img-fluid" /> 
                       </div> 
                     </div>
@@ -149,17 +149,15 @@
               </div>
               <div class="tab-select-outer">
                 <select id="tab-select">
-                  <option value="#tab01">Tab 1</option>
-                  <option value="#tab02">Tab 2</option>
-                  <option value="#tab03">Tab 3</option>
-                  <option value="#tab04">Tab 4</option>
-                  <option value="#tab05">Tab 5</option>
+                  <option value="#tab01">Backend</option>
+                  <option value="#tab02">Frontend</option>
+                  <option value="#tab03">Devops</option> 
                 </select>
               </div>
             
               <div id="tab01" class="tab-contents">
                 <div class="row">
-                  <div class="col-md-3">
+                  <div class="col-md-3 col-6">
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/backend/nodejs.png" class="img-fluid"/>
                       <div class="overlay">
@@ -167,7 +165,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-3 col-6">
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/backend/php.png" class="img-fluid"/>
                       <div class="overlay">
@@ -175,7 +173,7 @@
                       </div>
                     </div>
                   </div>  
-                  <div class="col-md-3">
+                  <div class="col-md-3 col-6">
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/backend/laravel.png" class="img-fluid"/>
                       <div class="overlay">
@@ -183,7 +181,7 @@
                       </div>
                     </div>
                   </div>  
-                  <div class="col-md-3">
+                  <div class="col-md-3 col-6">
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/backend/codeigniter.png" class="img-fluid"/>
                       <div class="overlay">
@@ -191,7 +189,7 @@
                       </div>
                     </div>
                   </div>  
-                  <div class="col-md-3">
+                  <div class="col-md-3 col-6">
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/backend/python.png" class="img-fluid"/>
                       <div class="overlay">
@@ -199,7 +197,7 @@
                       </div>
                     </div>
                   </div>  
-                  <div class="col-md-3">
+                  <div class="col-md-3 col-6">
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/backend/java.png" class="img-fluid"/>
                       <div class="overlay">
@@ -212,7 +210,7 @@
               </div>
               <div id="tab02" class="tab-contents">
                 <div class="row">
-                  <div class="col-md-3">
+                  <div class="col-md-3 col-6">
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/frontend/reactjs.png" class="img-fluid"/>
                       <div class="overlay">
@@ -220,7 +218,7 @@
                       </div>
                     </div>
                   </div> 
-                  <div class="col-md-3">
+                  <div class="col-md-3 col-6">
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/frontend/angular.png" class="img-fluid"/>
                       <div class="overlay">
@@ -228,7 +226,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-3 col-6">
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/frontend/javascript.png" class="img-fluid"/>
                       <div class="overlay">
@@ -236,7 +234,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-3 col-6">
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/frontend/html.png" class="img-fluid"/>
                       <div class="overlay">
@@ -244,7 +242,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-3 col-6">
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/frontend/css.png" class="img-fluid"/>
                       <div class="overlay">
@@ -252,7 +250,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-3 col-6">
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/frontend/sass.png" class="img-fluid"/>
                       <div class="overlay">
@@ -260,7 +258,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-3 col-6">
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/frontend/ionic.png" class="img-fluid"/>
                       <div class="overlay">
@@ -268,7 +266,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-3 col-6">
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/frontend/bootstrap.png" class="img-fluid"/>
                       <div class="overlay">
@@ -280,7 +278,7 @@
               </div>
               <div id="tab03" class="tab-contents">
                 <div class="row">
-                  <div class="col-md-3">
+                  <div class="col-md-3 col-6">
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/devops/git.png" class="img-fluid"/>
                       <div class="overlay">
@@ -288,7 +286,7 @@
                       </div>
                     </div>
                   </div> 
-                  <div class="col-md-3">
+                  <div class="col-md-3 col-6">
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/devops/gitlab.png" class="img-fluid"/>
                       <div class="overlay">
@@ -296,7 +294,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-3 col-6">
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/devops/docker.png" class="img-fluid"/>
                       <div class="overlay">
@@ -304,7 +302,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-3 col-6">
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/devops/bitbucket.png" class="img-fluid"/>
                       <div class="overlay">
