--- a/index.html
+++ b/index.html
@@ -97,15 +97,17 @@
         <div class="row">
           <div class="col-lg-11 text-center mx-auto col-12"> 
               <div class="col-lg-8 mx-auto">
-                <h2>Some projects I worked on for consumers</h2>
+                <h2 class="mb-4">Some projects I worked on</h2>
+                <p>I help define the project goals and scope which helps you manage expectations and help me as a developer to stay within the scope, budget, and schedule while delivering quality work.</p>
               </div> 
               <div class="owl-carousel owl-theme">  
-
                 <div class="item">
                   <div class="project-wrapper">
                     <div class="project-info">
                       <div class="project-thumbnail">
-                        <img src="images/project/project-1.png" class="img-fluid" /> 
+                        <a href="https://poslitesoftware.com" target="_blank">
+                          <img src="images/project/project-1.png" class="img-fluid" /> 
+                        </a>
                       </div> 
                     </div>
                   </div>
@@ -114,7 +116,9 @@
                   <div class="project-wrapper">
                     <div class="project-info">
                       <div class="project-thumbnail">
-                        <img src="images/project/project-2.png" class="img-fluid" /> 
+                        <a href="https://www.youtube.com/watch?v=0JdiDfMjo2A" target="_blank">
+                          <img src="images/project/project-2.png" class="img-fluid" /> 
+                        </a>
                       </div> 
                     </div>
                   </div>
@@ -123,7 +127,9 @@
                   <div class="project-wrapper">
                     <div class="project-info">
                       <div class="project-thumbnail">
-                        <img src="images/project/project-3.png" class="img-fluid" /> 
+                        <a href="https://play.google.com/store/apps/details?id=com.angalamat&hl=en&gl=US" target="_blank">
+                          <img src="images/project/project-3.png" class="img-fluid" /> 
+                        </a>
                       </div> 
                     </div>
                   </div>
@@ -139,6 +145,7 @@
         <div class="row">
           <div class="col-lg-12 text-center mx-auto col-12" id="technologies">  
             <h2 class="mb-4">Technologies I use</h2>
+            <p class="mb-4 sub">Every problem has a solution, let me help you determine the suitable tech stack for your project</p>
             <div class="tabs">
               <div class="tab-button-outer">
                 <ul id="tab-button"> 
