--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/backend/python.png" class="img-fluid"/>
                       <div class="overlay">
-                        <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
+                        <div class="text">Python is a computer programming language often used to build websites and software, automate tasks, and conduct data analysis.</div>
                       </div>
                     </div>
                   </div>  
@@ -208,7 +208,7 @@
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/backend/java.png" class="img-fluid"/>
                       <div class="overlay">
-                        <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
+                        <div class="text">Java is primarily used for back-end development, but it can also be utilized in front-end development.</div>
                       </div>
                     </div>
                   </div>  
@@ -221,7 +221,7 @@
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/frontend/reactjs.png" class="img-fluid"/>
                       <div class="overlay">
-                        <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
+                        <div class="text">React is a JavaScript library developed by Facebook which, among other things, was used to build Instagram.com. It aims to allow developers to create fast user interfaces for websites and applications alike easily.</div>
                       </div>
                     </div>
                   </div> 
@@ -229,7 +229,7 @@
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/frontend/angular.png" class="img-fluid"/>
                       <div class="overlay">
-                        <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
+                        <div class="text">AngularJS is a structural framework for dynamic web apps. It lets you use HTML as your template language and lets you extend HTML's syntax to express your application's components clearly and succinctly.</div>
                       </div>
                     </div>
                   </div>
@@ -237,7 +237,7 @@
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/frontend/javascript.png" class="img-fluid"/>
                       <div class="overlay">
-                        <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
+                        <div class="text">Javascript is used by programmers across the world to create dynamic and interactive web content like applications and browsers.</div>
                       </div>
                     </div>
                   </div>
@@ -245,7 +245,7 @@
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/frontend/html.png" class="img-fluid"/>
                       <div class="overlay">
-                        <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
+                        <div class="text">HTML provides the basic structure of sites, which is enhanced and modified by other technologies like CSS and JavaScript. CSS is used to control presentation, formatting, and layout. </div>
                       </div>
                     </div>
                   </div>
@@ -253,7 +253,7 @@
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/frontend/css.png" class="img-fluid"/>
                       <div class="overlay">
-                        <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
+                        <div class="text">CSS is use to design and layout the web page.</div>
                       </div>
                     </div>
                   </div>
@@ -269,7 +269,7 @@
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/frontend/ionic.png" class="img-fluid"/>
                       <div class="overlay">
-                        <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
+                        <div class="text">Ionic is an open source UI toolkit for building performant, high-quality mobile apps using web technologies.</div>
                       </div>
                     </div>
                   </div>
@@ -277,7 +277,8 @@
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/frontend/bootstrap.png" class="img-fluid"/>
                       <div class="overlay">
-                        <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
+                        <div class="text">Bootstrap is a free, open source front-end development framework for the creation of websites and web apps. Designed to enable responsive development of mobile-first websites, Bootstrap provides a collection of syntax for template designs.
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -289,7 +290,7 @@
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/devops/git.png" class="img-fluid"/>
                       <div class="overlay">
-                        <div class="text">Hello World</div>
+                        <div class="text">Git is a DevOps tool used for source code management. It is a free and open-source version control system used to handle small to very large projects efficiently.</div>
                       </div>
                     </div>
                   </div> 
@@ -297,7 +298,7 @@
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/devops/gitlab.png" class="img-fluid"/>
                       <div class="overlay">
-                        <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
+                        <div class="text">GitLab is a web-based Git repository that provides free open and private repositories, issue-following capabilities, and wikis.</div>
                       </div>
                     </div>
                   </div>
@@ -305,7 +306,7 @@
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/devops/docker.png" class="img-fluid"/>
                       <div class="overlay">
-                        <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
+                        <div class="text">Docker is a software platform that allows you to build, test, and deploy applications quickly.</div>
                       </div>
                     </div>
                   </div>
@@ -313,7 +314,7 @@
                     <div class="tech-img-wrapper"> 
                       <img src="images/technologies/devops/bitbucket.png" class="img-fluid"/>
                       <div class="overlay">
-                        <div class="text">Laravel is one such technology that is used for back-end applications. Laravel is a PHP-based back-end framework for web application development.</div>
+                        <div class="text">Bitbucket Cloud is a Git based code hosting and collaboration tool, built for teams.</div>
                       </div>
                     </div>
                   </div> 
